[package]
name = "ftrace-live"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
ctrlc = "3.1.4"
nannou_osc = "0.14.0"