[package]
name = "ftrace_sonifier"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
crossbeam-channel = "0.4"
dasp = { version = "0.11.0", features = ["all"] }
nannou_osc = "0.14.0"
nannou = "0.14.1"
oscen = "0.1.4"
midi-control = { version = "0.1.0", path = "/home/erik/git/midi-control" }
midir = "0.6.2"
claxon = "0.4.3"