[package]
name = "repo_visualiser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
indexmap = "1.7.0"
[dependencies.serde_with]
version = "1.9.4"
features = [ "json" ]
