[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
nannou_osc = "0.18.0"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
simple_logger = "4.2.0"
toml = "0.8.6"
