[package]
name = "matrix_inversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
nalgebra = "0.32.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
