[package]
name = "trace_sonifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
color-eyre = "0.6.2"
knyst = { path = "/home/erik/code/rust/audio/knyst/knyst" }


[[bin]]
name = "audify"
path = "bin/audify.rs"
