[package]
name = "trace_sonifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
color-eyre = "0.6.2"
knyst = { path = "/home/erik/code/rust/audio/knyst/knyst" }
knyst_waveguide2 = { path = "/home/erik/code/rust/audio/knyst_waveguide2" }
knyst_reverb = { path = "/home/erik/code/rust/audio/knyst_reverb" }
neodrs = { path = "/home/erik/Nextcloud/Neod/code/neod-rs/neodrs" }
atomic_float = "0.1.0"
musical_matter = { path = "/home/erik/code/rust/musical_matter" }
rand = "0.8.5"
fxhash = "0.2.1"
tokio = { version = "1.34.0", features = ["full"] }
nannou_osc = "0.18.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"


[[bin]]
name = "audify"
path = "bin/audify.rs"

[[bin]]
name = "instruction_types"
path = "bin/instruction_types.rs"

[[bin]]
name = "waveguide_segments"
path = "bin/waveguide_segments.rs"

[[bin]]
name = "combined"
path = "bin/combined.rs"
