[package]
name = "bot_trace_parser"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nannou = "0.15"
