[package]
name = "cyber_glow_osc_relay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nannou_osc = "0.17"
chrono = "0.4"
clap = "2.33"
ctrlc = "3.2.1"
