[package]
name = "cyber_glow_osc_relay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nannou_osc = "0.17"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
ctrlc = "3.2.1"
once_cell = "1.9.0"
