[package]
name = "daisy-blank"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rtic = "1.0.0"
cortex-m = "^0.7.1"
cortex-m-rt = { version = "^0.7.3", features = ["device"] }
stm32h7xx-hal = { version = "0.16.0", features = [ "stm32h750v", "rt", "revision_v", "usb_hs" ] }
panic-halt = "0.2.0"
libdaisy = { path = "./libdaisy-rust"}
embedded-sdmmc = "0.5"
log = "0.4.11"

libm = "0.2.5"

# For debug purposes
rtt-target = { version = "0.5.0", optional = true}
# dasp = { version = "0.11.0", default-features = false, features = ["all-no-std"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
micromath = { version = "2.1.0", features = ["num-traits"] }
embedded-alloc = "0.5.1"
heapless = "0.8.0"

[features]
default = ["sd_card", "log"]
log = ['libdaisy/log-rtt', "rtt-target"]
sd_card = []



[profile.release]
codegen-units = 1
lto = "fat"
