[package]
name = "bot_trace_parser"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nannou = "0.15"
nannou_osc = "0.15.0"
chrono = "0.4"
# Audio stuff
cpal = "0.13.1"
slotmap = { version = "1.0" }
rtrb = "0.1.3"
erael_dsp = { path = "/home/erik/code/rust/rust_wave_guides/erael_dsp/" }
crossbeam = "0.8.0"
crossbeam-channel = "0.5.1"
biquad = "0.4.1"
jack = "0.7.0"
