[package]
name = "drift_data"
version = "0.1.0"
authors = ["Erik Natanael Gustafsson <erik@eriknatanael.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nannou_osc = "0.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
