[package]
name = "data_vertex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
crossterm = "0.26.1"
nix = "0.26.2"
protocol = { version = "3.4", features = ["derive"] }
syscalls_shared = { path = "../syscalls_shared/" }
tui = "0.19.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
log = "0.4.17"
futures-util = "0.3.27"
postcard = { version = "1.0.4", features = ["alloc", "use-std"] }
env_logger = "0.10.0"
enum-iterator = "1.4.0"
num_enum = "0.5.11"
serde = { version = "1.0.159", features = ["derive"] }
rtrb = "0.2.3"
rfd = "0.11.3"
humantime = "2.1.0"
