[package]
name = "data_vertex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
crossterm = "0.26.1"
protocol = { version = "3.4", features = ["derive"] }
syscalls_shared = { path = "../syscalls_shared/" }
# tui = "0.19.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
log = "0.4.17"
futures-util = "0.3.27"
postcard = { version = "1.0.4", features = ["alloc", "use-std"] }
env_logger = "0.10.0"
enum-iterator = "1.4.0"
num_enum = "0.5.11"
serde = { version = "1.0.159", features = ["derive"] }
rtrb = "0.2.3"
rfd = "0.11.3"
humantime = "2.1.0"
nannou_osc = "0.18.0"
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_json = "1.0.96"
ratatui = "0.21.0"
console-subscriber = "0.1.10"
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = "0.23.0"
fxhash = "0.2.1"
egui_plot = "0.23.0"
walkdir = "2.4.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.6.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
