[package]
name = "ws_syscalls_receiver_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.1"
