[package]
name = "led_matrix_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["jpeg"]}
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16"
fastrand = "1.8"
rand = "0.8.5"
parser = { path = "../parser" }
knyst = { path = "../../../../../../rust/audio/knyst", features = ["jack"] }
anyhow = "1.0"
nannou_osc = "0.18"
crossbeam = "0.8.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
