[package]
name = "led_matrix_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["jpeg"]}
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16"
fastrand = "1.8"
rand = "0.8.5"
parser = { path = "../parser" }
# knyst = { path = "../../../../../../rust/audio/knyst", features = ["jack"] }
knyst = { version = "0.2", features = ["jack"] }
anyhow = "1.0"
nannou_osc = "0.18"
crossbeam = "0.8.2"
tokio-tungstenite = "0.17.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time"] }
futures-channel = "0.3"
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
url = "2.0.0"
env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"
rfd = "0.10"
clap = { version = "4.0.18", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
