[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
nom = "7"
postcard = { version = "1.0", features = ["alloc"] }
anyhow = "1.0"
rustfft = "6.0"
hound = "3.5"
